force-app/main/default/objects/Potential_Match__c.object
<CustomObject>
    <fields>
        <fullName>Existing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Contact (Candidate)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Matches (As Existing)</relationshipLabel>
        <relationshipName>Potential_Matches_Existing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoming_Payload__c</fullName>
        <label>Incoming Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Match_Rule__c</fullName>
        <label>Match Rule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Score__c</fullName>
        <label>Match Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Contact__c</fullName>
        <label>New Contact (Holding)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Matches (As New)</relationshipLabel>
        <relationshipName>Potential_Matches_New</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Confirmed - Merged</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Potential Match</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Match ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>